[gd_scene load_steps=14 format=3 uid="uid://bu3u0sp0rcfod"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_uy7ip"]
[ext_resource type="Texture2D" uid="uid://chjxdi816dxg3" path="res://assets/textures/player/player_sheet.png" id="2_hh4ny"]
[ext_resource type="Texture2D" uid="uid://qce0bjcebsoc" path="res://assets/textures/player/staff.png" id="3_7lfx2"]
[ext_resource type="Script" path="res://entities/player/staff.gd" id="4_lb6h3"]
[ext_resource type="PackedScene" uid="uid://b0r0tfacnupde" path="res://entities/player/projectile.tscn" id="5_5m7l8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lstag"]
radius = 7.0
height = 18.0

[sub_resource type="Animation" id="Animation_5ffwy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/PlayerBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/PlayerBody:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_fjrry"]
resource_name = "death"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/PlayerBody:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3)]
}

[sub_resource type="Animation" id="Animation_ovq38"]
resource_name = "fall"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/PlayerBody:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2)]
}

[sub_resource type="Animation" id="Animation_b16og"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/PlayerBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_uhdk0"]
resource_name = "jump"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/PlayerBody:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2)]
}

[sub_resource type="Animation" id="Animation_ieown"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/PlayerBody:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u4svc"]
_data = {
"RESET": SubResource("Animation_5ffwy"),
"death": SubResource("Animation_fjrry"),
"fall": SubResource("Animation_ovq38"),
"idle": SubResource("Animation_b16og"),
"jump": SubResource("Animation_uhdk0"),
"walk": SubResource("Animation_ieown")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -11)
collision_layer = 2
script = ExtResource("1_uy7ip")
speed = 150.0
speed_limit = 250.0
acceleration = 10.0

[node name="BodyPivot" type="Node2D" parent="."]

[node name="PlayerBody" type="Sprite2D" parent="BodyPivot"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-2, 0)
texture = ExtResource("2_hh4ny")
hframes = 9
vframes = 5
frame = 9

[node name="HitDetection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="HitArea" type="CollisionShape2D" parent="HitDetection"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_lstag")
metadata/_edit_lock_ = true

[node name="PlayerBody" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_lstag")
metadata/_edit_lock_ = true

[node name="WeaponContainer" type="Node2D" parent="."]
position = Vector2(-3, 5)
metadata/_edit_group_ = true

[node name="Staff" type="Sprite2D" parent="WeaponContainer"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("3_7lfx2")
script = ExtResource("4_lb6h3")
projectile_scene = ExtResource("5_5m7l8")

[node name="FirePosition" type="Marker2D" parent="WeaponContainer/Staff"]
position = Vector2(0, -4)

[node name="FireCooldown" type="Timer" parent="WeaponContainer/Staff"]

[node name="BodyAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u4svc")
}

[connection signal="area_entered" from="HitDetection" to="." method="_on_hit_detection_area_entered"]
[connection signal="timeout" from="WeaponContainer/Staff/FireCooldown" to="WeaponContainer/Staff" method="_on_fire_cooldown_timeout"]
[connection signal="animation_finished" from="BodyAnimation" to="." method="_on_body_animation_animation_finished"]
